add reuse distance monitor

--- a/tests/pgo.cfg
+++ b/tests/pgo.cfg
@@ -73,10 +73,15 @@ sys = {
           ways = 16;
       };
       repl = {
-          type = "PriSM";
+          //type = "PriSM";
           //type = "FS";
           //type = "Vantage";
+          type = "WayPart";
           partMapper = "Core";
+          monitor = "rdMonitor";
+          samplerSets = 256;
+          maxRd = 1024;
+          window = 0;
       }
       banks = 3;
       caches = 1;
