PDP replacement policy

--- a/tests/pgo.cfg
+++ b/tests/pgo.cfg
@@ -28,6 +28,8 @@ sim = {
   //maxTotalInstrs = 100000000L;
   phaseLength = 10000;
   statsPhaseInterval = 1;
+  //maxTotalInstrs = 100000000L;
+  maxPhases = 10L;
 };
 
 sys = {
@@ -63,7 +65,7 @@ sys = {
       size = 262144;
       repl = {
         type = "RRIP";
-        distantRRPV = 15;
+        //distantRRPV = 15;
       }
     };
 
@@ -80,8 +82,9 @@ sys = {
           type = "WayPart";
           partMapper = "Core";
           monitor = "rdMonitor";
-          samplerSets = 256;
-          maxRd = 256;
+          samplerSets = 4096;
+          maxRd = 255;
+          //buckets = 256;
           window = 0;
       }
       banks = 3;
