--- a/output/RDV/pgo.cfg
+++ b/output/RDV/pgo.cfg
@@ -2,26 +2,16 @@
 // based on zephyr3 L5640@2.27GHz
 
 process0 = {
-  command = "/mnt/hgfs/ShareShen/zsim-master/tests/bzip2/bzip2_base.gcc41-amd64bit /mnt/hgfs/ShareShen/zsim-master/tests/bzip2/chicken.jpg 30";
-  //command = "ls -alh --color tests/";
+  command = abc
 };
 
 //process1 = {
-  //command = "/mnt/hgfs/ShareShen/zsim-master/tests/bzip2/bzip2_base.gcc41-amd64bit /mnt/hgfs/ShareShen/zsim-master/tests/bzip2/chicken.jpg 30";
-  //command = "cat tests/simple.cfg";
-    //startFastForwarded = True;
 //};
 
 //process2 = {
-  //command = "/mnt/hgfs/ShareShen/zsim-master/tests/bzip2/bzip2_base.gcc41-amd64bit /mnt/hgfs/ShareShen/zsim-master/tests/bzip2/chicken.jpg 30";
-  //command = "cat tests/simple.cfg";
-    //startFastForwarded = True;
 //};
 
 //process3 = {
-  //command = "/mnt/hgfs/ShareShen/zsim-master/tests/bzip2/bzip2_base.gcc41-amd64bit /mnt/hgfs/ShareShen/zsim-master/tests/bzip2/chicken.jpg 30";
-  //command = "cat tests/simple.cfg";
-    //startFastForwarded = True;
 //};
 
 sim = {
@@ -29,7 +19,7 @@ sim = {
   phaseLength = 10000;
   statsPhaseInterval = 100;
   //maxTotalInstrs = 100000000L;
-  maxPhases = 10000000L; // 100 billion
+  maxPhases = 5000000L; // 10 billion
 };
 
 sys = {
@@ -45,7 +35,6 @@ sys = {
     };
 
     l1i = {
-    //type = "Timing";
       array = {
         type = "SetAssoc";
         ways = 4;
@@ -63,6 +52,7 @@ sys = {
       caches = 1;
       latency = 7;
       children = "l1i|l1d";
+	  nonInclusiveHack = true;
       size = 262144;
       //repl = {
         //type = "RRIP";
@@ -74,7 +64,9 @@ sys = {
       array = {
           type = "SetAssoc";
           hash = "H3";
-          ways = 16;
+          ways = 16; // l3 assoc
+		  useSampler = true;
+		  //fullyAssoc = true;
       };
       repl = {
 	      type = "LRU";
@@ -90,11 +82,12 @@ sys = {
           //buckets = 256;
           //window = 0;
       }
-      banks = 3;
+	  nonInclusiveHack = true;
+      banks = 1;
       caches = 1;
       latency = 27;
       children = "l2";
-      size = 12582912;
+      size = 524288; // l3 size
     };
   };
 
