fix the bug in coherency

--- a/output/RDV/pgo.cfg
+++ b/output/RDV/pgo.cfg
@@ -1,18 +1,7 @@
 // Used for the PGO compile flow
 // based on zephyr3 L5640@2.27GHz
 
-process0 = {
-  command = abc
-};
 
-//process1 = {
-//};
-
-//process2 = {
-//};
-
-//process3 = {
-//};
 
 sim = {
   //maxTotalInstrs = 100000000L;
@@ -29,7 +18,7 @@ sys = {
         type = "SetAssoc";
         ways = 8;
       };
-      caches = 1;
+      caches = 1; // L1 caches
       latency = 4;
       size = 32768;
     };
@@ -39,7 +28,7 @@ sys = {
         type = "SetAssoc";
         ways = 4;
       };
-      caches = 1;
+      caches = 1; // L1 caches
       latency = 3;
       size = 32768;
     };
@@ -49,7 +38,7 @@ sys = {
         type = "SetAssoc";
         ways = 8;
       };
-      caches = 1;
+      caches = 1; // L2 caches
       latency = 7;
       children = "l1i|l1d";
 	  nonInclusiveHack = true;
@@ -69,11 +58,12 @@ sys = {
 		  //fullyAssoc = true;
       };
       repl = {
-	      type = "LRU";
+	      //type = "LRU";
           //type = "PriSM";
           //type = "FS";
           //type = "Vantage";
-          //type = "WayPart";
+          type = "WayPart";
+		  interval = 100;
 		  //type = "PDP";
           //partMapper = "Core";
           //monitor = "rdMonitor";
@@ -83,8 +73,8 @@ sys = {
           //window = 0;
       }
 	  nonInclusiveHack = true;
-      banks = 1;
-      caches = 1;
+      banks = 2; // L3 banks
+      caches = 1; // L3 caches
       latency = 27;
       children = "l2";
       size = 524288; // l3 size
