strictly way partition

--- a/output/RDV/pgo.cfg
+++ b/output/RDV/pgo.cfg
@@ -54,7 +54,7 @@ sys = {
           type = "SetAssoc";
           hash = "H3";
           ways = 16; // l3 assoc
-		  useSampler = true;
+		  //useSampler = true;
 		  //fullyAssoc = true;
       };
       repl = {
