strictly way partition and set partition

--- a/output/RDV/pgo.cfg
+++ b/output/RDV/pgo.cfg
@@ -54,17 +54,18 @@ sys = {
           type = "SetAssoc";
           hash = "H3";
           ways = 16; // l3 assoc
-		  //useSampler = true;
-		  //fullyAssoc = true;
+          //useSampler = true;
+          //fullyAssoc = true;
       };
       repl = {
-	      //type = "LRU";
+          //type = "LRU";
           //type = "PriSM";
           //type = "FS";
           //type = "Vantage";
-          type = "WayPart";
-		  interval = 100;
-		  //type = "PDP";
+          //type = "WayPart";
+          //interval = 100;
+		  type = "SetPart";
+          //type = "PDP";
           //partMapper = "Core";
           //monitor = "rdMonitor";
           //samplerSets = 4096;
@@ -72,7 +73,7 @@ sys = {
           //buckets = 256;
           //window = 0;
       }
-	  nonInclusiveHack = true;
+      nonInclusiveHack = true;
       banks = 2; // L3 banks
       caches = 1; // L3 caches
       latency = 27;
