distribution of same bits in tag comparison

--- a/output/RDV/pgo.cfg
+++ b/output/RDV/pgo.cfg
@@ -62,9 +62,9 @@ sys = {
           //type = "PriSM";
           //type = "FS";
           //type = "Vantage";
-          //type = "WayPart";
+          type = "WayPart";
           //interval = 100;
-		  type = "SetPart";
+		  //type = "SetPart";
           //type = "PDP";
           //partMapper = "Core";
           //monitor = "rdMonitor";
